src/styles/icons.scss
.icon {
  width: 24px;
  height: 24px;
  display: block;

  @include hover(transform, scale(1.2));

  &__wrapper-phone {
    display: flex;
    align-items: center;
    gap: 20px;

    &--show {
      text-align: right;
      font-size: 12px;
      font-family: inherit;
      font-weight: 700;
      line-height: 16px;
      letter-spacing: 2px;
      text-transform: uppercase;
      color: $main-color-text;
      transition: all 0.3s linear;
      opacity: 0;
    }

    &:hover {
      .icon__wrapper-phone--show {
        opacity: 1;
      }
    }
  }

  &--phone {
    position: relative;
    background-image: url(../images/icons/icon-phone-call-mobile.svg);
  }

  &--menu {
    background-image: url(../images/icons/icon-burger-menu-mobile.svg);

    &:hover {
      background-image: url(../images/icons/icon-burger-menu-hover.svg);
    }
  }

  &--close {
    background-image: url(../images/icons/icon-close-mobile.svg);
  }

  @include onTablet {
    width: 32px;
    height: 32px;

    &--phone {
      background-image: url(../images/icons/icon-phone-call.svg);
    }

    &--menu {
      background-image: url(../images/icons/icon-burger-menu.svg);
      &:hover {
        transform: scale(1.2);
      }
    }

    &--close {
      background-image: url(../images/icons/icon-close.svg);
    }
  }
}

